--- a/README.html
+++ b/README.html
@@ -156,7 +156,7 @@
 <div id="timeAreaLL"><h1 id="timeLL"></h1></div>
 
 <div class="card">
-    <img src="./images/bd.jpg" alt="生日蛋糕" class="cake">
+    <img src="https://up.enterdesk.com/edpic_source/24/81/15/24811572ef5ff4863e750a717fbb7fee.jpg" alt="生日蛋糕" class="cake">
     <h1>生日快乐！🎉🎂</h1>
     <div class="candles">
         <div class="candle">
